Revert "Fixed an issue where the column settings box in the dashboard would be cropped in certain cases."
This reverts commit e8373063ffe43f3e10e2808ce5ac53b1a30c5a59.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Table.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Table.css
@@ -735,7 +735,7 @@ thead .headerSortDown > a:before {
 
 .DataTable thead th.DashboardHeader .ColumnSettingsContainer,
 .TableSmall thead th.OverviewHeader .ColumnSettingsContainer {
-    position: absolute;
+    position: relative;
 }
 
 .DataTable thead th.DashboardHeader .ColumnSettingsBox,
@@ -750,7 +750,7 @@ thead .headerSortDown > a:before {
     padding: 4px;
     position: absolute;
     right: 0px;
-    top: 0px;
+    top: 2px;
     width: 180px;
     z-index: 100;
 }
